findChains